# bigfix_console

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: zizmor.yml
.github/workflows/: pre-commit.yaml  test_build.yaml
bigfix-console/: __main__.py
bigfix_console/: __main__.py
